--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="Hansahoehe.jpg" id="im" />
     <form>
         <label for="idnome">Nome</label>
-        <input type="text" name="nome" id="idnome" class="caixa" required placeholder="Nome" autocomplete="name">
+        <input type="text" name="nome" id="idnome" required placeholder="Nome" autocomplete="name">
 
         <button>Botão</button>
     </form>
